Window Spike Calculation

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -4957,8 +4957,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "64c1421d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== PRICE SPIKE DETECTION ANALYSIS ===\n",
+      "Detecting price spikes > 0.5% within 60 seconds...\n",
+      "Calculating percentage price changes...\n",
+      "Calculating rolling maximum percentage changes...\n",
+      "Identifying price spikes...\n",
+      "\n",
+      "=== SPIKE DETECTION RESULTS ===\n",
+      "Simple percentage change spikes: 0\n",
+      "Rolling window spikes: 8\n",
+      "Window maximum spikes: 58\n",
+      "\n",
+      "=== ROLLING WINDOW SPIKE ANALYSIS (>0.5% in 60s) ===\n",
+      "Top 10 largest rolling window changes:\n",
+      "Rank Time         Price    Pct Change   Type  \n",
+      "------------------------------------------------------------\n",
+      "1    09:16:50     ₹387.75  0.56       % Up    \n",
+      "2    09:16:51     ₹387.75  0.54       % Up    \n",
+      "3    09:18:23     ₹389.45  0.54       % Up    \n",
+      "4    09:16:48     ₹387.60  0.52       % Up    \n",
+      "5    09:16:45     ₹387.75  0.52       % Up    \n",
+      "6    09:16:44     ₹387.75  0.52       % Up    \n",
+      "7    09:16:47     ₹387.60  0.51       % Up    \n",
+      "8    09:16:46     ₹387.60  0.51       % Up    \n",
+      "\n",
+      "=== WINDOW MAXIMUM SPIKE ANALYSIS (>0.5% max in 60s) ===\n",
+      "Top 10 largest window maximum changes:\n",
+      "Rank Time         Price    Max Pct Change \n",
+      "------------------------------------------------------------\n",
+      "1    09:16:44     ₹387.75  0.56          %\n",
+      "2    09:16:45     ₹387.60  0.56          %\n",
+      "3    09:16:45     ₹387.75  0.56          %\n",
+      "4    09:16:46     ₹387.60  0.56          %\n",
+      "5    09:16:46     ₹387.60  0.56          %\n",
+      "6    09:16:47     ₹387.60  0.56          %\n",
+      "7    09:16:48     ₹387.60  0.56          %\n",
+      "8    09:16:49     ₹387.70  0.56          %\n",
+      "9    09:16:49     ₹387.60  0.56          %\n",
+      "10   09:16:42     ₹387.70  0.54          %\n",
+      "\n",
+      "=== TIME-BASED SPIKE ANALYSIS ===\n",
+      "\n",
+      "=== SPIKE CLUSTERING ANALYSIS ===\n",
+      "\n",
+      "=== SUMMARY STATISTICS ===\n",
+      "Total price ticks analyzed: 10,956\n",
+      "Spike threshold: 0.5%\n",
+      "Time window: 60 seconds\n",
+      "Total spikes detected: 0\n",
+      "Spike frequency: 0.00%\n",
+      "\n",
+      "=== EXPORT DATA ===\n",
+      "Spike data is available in:\n",
+      "- 'spikes_simple': Simple percentage change spikes\n",
+      "- 'spikes_rolling': Rolling window spikes\n",
+      "- 'spikes_window': Window maximum spikes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify spikes in price > X% within Y seconds\n",
+    "print(\"=== PRICE SPIKE DETECTION ANALYSIS ===\")\n",
+    "\n",
+    "# Set parameters for spike detection (you can adjust these values)\n",
+    "X_PERCENT = 0.5  # Minimum percentage change to consider as a spike\n",
+    "Y_SECONDS = 60   # Time window in seconds to look for spikes\n",
+    "\n",
+    "print(f\"Detecting price spikes > {X_PERCENT}% within {Y_SECONDS} seconds...\")\n",
+    "\n",
+    "# Ensure data is sorted by datetime\n",
+    "df = df.sort_values('date').reset_index(drop=True)\n",
+    "\n",
+    "# Calculate percentage price changes over different time windows\n",
+    "print(\"Calculating percentage price changes...\")\n",
+    "\n",
+    "# Method 1: Rolling percentage change over Y seconds\n",
+    "df['price_pct_change'] = df['price'].pct_change() * 100\n",
+    "\n",
+    "# Method 2: Percentage change from Y seconds ago\n",
+    "df['price_pct_change_rolling'] = df['price'].pct_change(periods=Y_SECONDS) * 100\n",
+    "\n",
+    "# Method 3: Maximum percentage change within rolling Y-second window\n",
+    "def max_pct_change_in_window(prices, window_seconds):\n",
+    "    \"\"\"Calculate maximum percentage change within a time window\"\"\"\n",
+    "    if len(prices) < 2:\n",
+    "        return 0\n",
+    "    \n",
+    "    max_pct_change = 0\n",
+    "    for i in range(len(prices)):\n",
+    "        for j in range(i+1, min(i+window_seconds+1, len(prices))):\n",
+    "            pct_change = abs((prices.iloc[j] - prices.iloc[i]) / prices.iloc[i]) * 100\n",
+    "            max_pct_change = max(max_pct_change, pct_change)\n",
+    "    \n",
+    "    return max_pct_change\n",
+    "\n",
+    "# Calculate rolling maximum percentage change\n",
+    "print(\"Calculating rolling maximum percentage changes...\")\n",
+    "df['max_pct_change_window'] = df['price'].rolling(window=Y_SECONDS, min_periods=1).apply(\n",
+    "    lambda x: max_pct_change_in_window(x, Y_SECONDS), raw=False\n",
+    ")\n",
+    "\n",
+    "# Identify spikes based on different criteria\n",
+    "print(\"Identifying price spikes...\")\n",
+    "\n",
+    "# Criterion 1: Simple percentage change threshold\n",
+    "spikes_simple = df[abs(df['price_pct_change']) > X_PERCENT].copy()\n",
+    "spikes_simple['spike_type'] = spikes_simple['price_pct_change'].apply(\n",
+    "    lambda x: 'Up' if x > 0 else 'Down'\n",
+    ")\n",
+    "\n",
+    "# Criterion 2: Rolling window percentage change threshold\n",
+    "spikes_rolling = df[abs(df['price_pct_change_rolling']) > X_PERCENT].copy()\n",
+    "spikes_rolling['spike_type'] = spikes_rolling['price_pct_change_rolling'].apply(\n",
+    "    lambda x: 'Up' if x > 0 else 'Down'\n",
+    ")\n",
+    "\n",
+    "# Criterion 3: Maximum percentage change within window threshold\n",
+    "spikes_window = df[df['max_pct_change_window'] > X_PERCENT].copy()\n",
+    "\n",
+    "print(f\"\\n=== SPIKE DETECTION RESULTS ===\")\n",
+    "print(f\"Simple percentage change spikes: {len(spikes_simple):,}\")\n",
+    "print(f\"Rolling window spikes: {len(spikes_rolling):,}\")\n",
+    "print(f\"Window maximum spikes: {len(spikes_window):,}\")\n",
+    "\n",
+    "# Analyze simple percentage change spikes\n",
+    "if len(spikes_simple) > 0:\n",
+    "    print(f\"\\n=== SIMPLE PERCENTAGE CHANGE SPIKES (>{X_PERCENT}%) ===\")\n",
+    "    \n",
+    "    # Group spikes by type\n",
+    "    up_spikes = spikes_simple[spikes_simple['spike_type'] == 'Up']\n",
+    "    down_spikes = spikes_simple[spikes_simple['spike_type'] == 'Down']\n",
+    "    \n",
+    "    print(f\"Up spikes: {len(up_spikes):,}\")\n",
+    "    print(f\"Down spikes: {len(down_spikes):,}\")\n",
+    "    \n",
+    "    # Display top spikes\n",
+    "    print(f\"\\nTop 10 largest percentage changes:\")\n",
+    "    top_spikes = spikes_simple.nlargest(10, 'price_pct_change')\n",
+    "    print(f\"{'Rank':<4} {'Time':<12} {'Price':<8} {'Pct Change':<12} {'Type':<6} {'Qty':<8}\")\n",
+    "    print(\"-\" * 70)\n",
+    "    \n",
+    "    for idx, (_, row) in enumerate(top_spikes.iterrows(), 1):\n",
+    "        print(f\"{idx:<4} {row['date'].strftime('%H:%M:%S'):<12} ₹{row['price']:<7.2f} {row['price_pct_change']:<11.2f}% {row['spike_type']:<6} {row['qty']:<8,}\")\n",
+    "\n",
+    "# Analyze rolling window spikes\n",
+    "if len(spikes_rolling) > 0:\n",
+    "    print(f\"\\n=== ROLLING WINDOW SPIKE ANALYSIS (>{X_PERCENT}% in {Y_SECONDS}s) ===\")\n",
+    "    \n",
+    "    # Find the largest rolling window spikes\n",
+    "    largest_rolling_spikes = spikes_rolling.nlargest(10, 'price_pct_change_rolling')\n",
+    "    \n",
+    "    print(f\"Top 10 largest rolling window changes:\")\n",
+    "    print(f\"{'Rank':<4} {'Time':<12} {'Price':<8} {'Pct Change':<12} {'Type':<6}\")\n",
+    "    print(\"-\" * 60)\n",
+    "    \n",
+    "    for idx, (_, row) in enumerate(largest_rolling_spikes.iterrows(), 1):\n",
+    "        print(f\"{idx:<4} {row['date'].strftime('%H:%M:%S'):<12} ₹{row['price']:<7.2f} {row['price_pct_change_rolling']:<11.2f}% {row['spike_type']:<6}\")\n",
+    "\n",
+    "# Analyze window maximum spikes\n",
+    "if len(spikes_window) > 0:\n",
+    "    print(f\"\\n=== WINDOW MAXIMUM SPIKE ANALYSIS (>{X_PERCENT}% max in {Y_SECONDS}s) ===\")\n",
+    "    \n",
+    "    # Find the largest window maximum spikes\n",
+    "    largest_window_spikes = spikes_window.nlargest(10, 'max_pct_change_window')\n",
+    "    \n",
+    "    print(f\"Top 10 largest window maximum changes:\")\n",
+    "    print(f\"{'Rank':<4} {'Time':<12} {'Price':<8} {'Max Pct Change':<15}\")\n",
+    "    print(\"-\" * 60)\n",
+    "    \n",
+    "    for idx, (_, row) in enumerate(largest_window_spikes.iterrows(), 1):\n",
+    "        print(f\"{idx:<4} {row['date'].strftime('%H:%M:%S'):<12} ₹{row['price']:<7.2f} {row['max_pct_change_window']:<14.2f}%\")\n",
+    "\n",
+    "# Time-based spike analysis\n",
+    "print(f\"\\n=== TIME-BASED SPIKE ANALYSIS ===\")\n",
+    "\n",
+    "# Group spikes by hour\n",
+    "if len(spikes_simple) > 0:\n",
+    "    spikes_simple['hour'] = spikes_simple['date'].dt.hour\n",
+    "    hourly_spikes = spikes_simple.groupby('hour').size()\n",
+    "    \n",
+    "    print(\"Hourly distribution of spikes:\")\n",
+    "    for hour, count in hourly_spikes.items():\n",
+    "        print(f\"  {hour:02d}:00-{hour:02d}:59: {count} spikes\")\n",
+    "\n",
+    "# Spike clustering analysis\n",
+    "print(f\"\\n=== SPIKE CLUSTERING ANALYSIS ===\")\n",
+    "\n",
+    "if len(spikes_simple) > 1:\n",
+    "    # Check if spikes are clustered in time\n",
+    "    spikes_sorted = spikes_simple.sort_values('date')\n",
+    "    time_diffs = spikes_sorted['date'].diff().dt.total_seconds()\n",
+    "    \n",
+    "    clustered_spikes = time_diffs[time_diffs <= 300]  # Within 5 minutes\n",
+    "    print(f\"Spikes within 5 minutes of each other: {len(clustered_spikes)}\")\n",
+    "    print(f\"Clustering percentage: {(len(clustered_spikes)/len(spikes_simple)*100):.1f}%\")\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(f\"\\n=== SUMMARY STATISTICS ===\")\n",
+    "print(f\"Total price ticks analyzed: {len(df):,}\")\n",
+    "print(f\"Spike threshold: {X_PERCENT}%\")\n",
+    "print(f\"Time window: {Y_SECONDS} seconds\")\n",
+    "print(f\"Total spikes detected: {len(spikes_simple):,}\")\n",
+    "print(f\"Spike frequency: {len(spikes_simple)/len(df)*100:.2f}%\")\n",
+    "\n",
+    "if len(spikes_simple) > 0:\n",
+    "    print(f\"Largest spike: {spikes_simple['price_pct_change'].max():.2f}%\")\n",
+    "    print(f\"Average spike magnitude: {spikes_simple['price_pct_change'].abs().mean():.2f}%\")\n",
+    "\n",
+    "# Export spike data\n",
+    "print(f\"\\n=== EXPORT DATA ===\")\n",
+    "print(\"Spike data is available in:\")\n",
+    "print(\"- 'spikes_simple': Simple percentage change spikes\")\n",
+    "print(\"- 'spikes_rolling': Rolling window spikes\")\n",
+    "print(\"- 'spikes_window': Window maximum spikes\")\n",
+    "\n",
+    "# Display sample of spike data\n",
+    "if len(spikes_simple) > 0:\n",
+    "    print(f\"\\n=== SAMPLE SPIKE DATA (First 5 rows) ===\")\n",
+    "    sample_spikes = spikes_simple[['date', 'price', 'price_pct_change', 'spike_type', 'qty']].head(5)\n",
+    "    print(sample_spikes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed20f3e3",
    "metadata": {},
    "outputs": [],
    "source": []
