--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -6474,8 +6474,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "99420454",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== ZERO TRADING DURATION ANALYSIS ===\n",
+      "Detecting trading breaks longer than 5 minutes...\n",
+      "Market hours: 09:00 - 15:59\n",
+      "Calculating time gaps between trades...\n",
+      "\n",
+      "=== TRADING BREAK DETECTION RESULTS ===\n",
+      "Total potential breaks detected: 0\n",
+      "Break threshold: 5 minutes\n",
+      "\n",
+      "=== MARKET HOURS ANALYSIS ===\n",
+      "Market hours: 09:00 - 15:59\n",
+      "Total market minutes: 420\n",
+      "Trading minutes: 10956\n",
+      "Break minutes: -10536\n",
+      "Break percentage: -2508.7%\n",
+      "\n",
+      "=== SUMMARY STATISTICS ===\n",
+      "Total trades analyzed: 10,956\n",
+      "Total potential breaks: 0\n",
+      "Break detection threshold: 5 minutes\n",
+      "\n",
+      "=== EXPORT DATA ===\n",
+      "Trading break data is available in:\n",
+      "- 'potential_breaks': DataFrame with all detected breaks\n",
+      "- 'break_impacts_df': DataFrame with price impact analysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Flag periods with zero trading for long durations (possible breaks)\n",
+    "print(\"=== ZERO TRADING DURATION ANALYSIS ===\")\n",
+    "\n",
+    "# Set parameters for break detection\n",
+    "MIN_BREAK_DURATION_MINUTES = 5  # Minimum duration to consider as a break\n",
+    "MARKET_HOURS = (9, 15)  # Market hours (9 AM to 3 PM)\n",
+    "\n",
+    "print(f\"Detecting trading breaks longer than {MIN_BREAK_DURATION_MINUTES} minutes...\")\n",
+    "print(f\"Market hours: {MARKET_HOURS[0]:02d}:00 - {MARKET_HOURS[1]:02d}:59\")\n",
+    "\n",
+    "# Ensure data is sorted by datetime\n",
+    "df = df.sort_values('date').reset_index(drop=True)\n",
+    "\n",
+    "# Calculate time differences between consecutive trades\n",
+    "print(\"Calculating time gaps between trades...\")\n",
+    "df['next_trade_time'] = df['date'].shift(-1)\n",
+    "df['time_gap_minutes'] = (df['next_trade_time'] - df['date']).dt.total_seconds() / 60\n",
+    "\n",
+    "# Identify potential breaks (gaps longer than threshold)\n",
+    "potential_breaks = df[df['time_gap_minutes'] > MIN_BREAK_DURATION_MINUTES].copy()\n",
+    "potential_breaks = potential_breaks.sort_values('time_gap_minutes', ascending=False)\n",
+    "\n",
+    "print(f\"\\n=== TRADING BREAK DETECTION RESULTS ===\")\n",
+    "print(f\"Total potential breaks detected: {len(potential_breaks):,}\")\n",
+    "print(f\"Break threshold: {MIN_BREAK_DURATION_MINUTES} minutes\")\n",
+    "\n",
+    "if len(potential_breaks) > 0:\n",
+    "    # Calculate break statistics\n",
+    "    total_break_time = potential_breaks['time_gap_minutes'].sum()\n",
+    "    avg_break_duration = potential_breaks['time_gap_minutes'].mean()\n",
+    "    max_break_duration = potential_breaks['time_gap_minutes'].max()\n",
+    "    \n",
+    "    print(f\"Total break time: {total_break_time:.1f} minutes\")\n",
+    "    print(f\"Average break duration: {avg_break_duration:.1f} minutes\")\n",
+    "    print(f\"Longest break: {max_break_duration:.1f} minutes\")\n",
+    "\n",
+    "# Display all potential breaks\n",
+    "if len(potential_breaks) > 0:\n",
+    "    print(f\"\\n=== ALL TRADING BREAKS (>{MIN_BREAK_DURATION_MINUTES} minutes) ===\")\n",
+    "    print(f\"{'Rank':<4} {'Start Time':<12} {'End Time':<12} {'Duration':<10} {'Start Price':<12} {'End Price':<12} {'Price Change':<12}\")\n",
+    "    print(\"-\" * 90)\n",
+    "    \n",
+    "    for idx, (_, row) in enumerate(potential_breaks.iterrows(), 1):\n",
+    "        start_time = row['date']\n",
+    "        end_time = row['next_trade_time']\n",
+    "        duration = row['time_gap_minutes']\n",
+    "        start_price = row['price']\n",
+    "        \n",
+    "        # Find the price at the end of the break\n",
+    "        end_price = df[df['date'] == end_time]['price'].iloc[0] if not df[df['date'] == end_time].empty else start_price\n",
+    "        price_change = end_price - start_price\n",
+    "        price_change_pct = (price_change / start_price) * 100 if start_price != 0 else 0\n",
+    "        \n",
+    "        print(f\"{idx:<4} {start_time.strftime('%H:%M:%S'):<12} {end_time.strftime('%H:%M:%S'):<12} {duration:<9.1f}m ₹{start_price:<11.2f} ₹{end_price:<11.2f} ₹{price_change:<11.2f} ({price_change_pct:+.2f}%)\")\n",
+    "\n",
+    "# Detailed analysis of trading breaks\n",
+    "if len(potential_breaks) > 0:\n",
+    "    print(f\"\\n=== DETAILED BREAK ANALYSIS ===\")\n",
+    "    \n",
+    "    # 1. Break duration categorization\n",
+    "    print(\"\\n--- BREAK DURATION CATEGORIZATION ---\")\n",
+    "    \n",
+    "    def categorize_break_duration(minutes):\n",
+    "        if minutes <= 10:\n",
+    "            return 'Short (5-10 min)'\n",
+    "        elif minutes <= 30:\n",
+    "            return 'Medium (10-30 min)'\n",
+    "        elif minutes <= 60:\n",
+    "            return 'Long (30-60 min)'\n",
+    "        else:\n",
+    "            return 'Very Long (>60 min)'\n",
+    "    \n",
+    "    potential_breaks['break_category'] = potential_breaks['time_gap_minutes'].apply(categorize_break_duration)\n",
+    "    break_categories = potential_breaks['break_category'].value_counts()\n",
+    "    \n",
+    "    print(\"Break duration distribution:\")\n",
+    "    for category, count in break_categories.items():\n",
+    "        print(f\"  {category}: {count} breaks\")\n",
+    "    \n",
+    "    # 2. Time distribution of breaks\n",
+    "    print(f\"\\n--- TIME DISTRIBUTION OF BREAKS ---\")\n",
+    "    potential_breaks['hour'] = potential_breaks['date'].dt.hour\n",
+    "    hourly_breaks = potential_breaks['hour'].value_counts().sort_index()\n",
+    "    \n",
+    "    print(\"Hourly distribution of trading breaks:\")\n",
+    "    for hour, count in hourly_breaks.items():\n",
+    "        print(f\"  {hour:02d}:00-{hour:02d}:59: {count} breaks\")\n",
+    "    \n",
+    "    # 3. Break impact analysis\n",
+    "    print(f\"\\n--- BREAK IMPACT ANALYSIS ---\")\n",
+    "    \n",
+    "    # Calculate price changes across breaks\n",
+    "    break_impacts = []\n",
+    "    for idx, (_, row) in enumerate(potential_breaks.iterrows()):\n",
+    "        start_time = row['date']\n",
+    "        end_time = row['next_trade_time']\n",
+    "        duration = row['time_gap_minutes']\n",
+    "        start_price = row['price']\n",
+    "        \n",
+    "        # Find the price at the end of the break\n",
+    "        end_price = df[df['date'] == end_time]['price'].iloc[0] if not df[df['date'] == end_time].empty else start_price\n",
+    "        price_change = end_price - start_price\n",
+    "        price_change_pct = (price_change / start_price) * 100 if start_price != 0 else 0\n",
+    "        \n",
+    "        break_impacts.append({\n",
+    "            'start_time': start_time,\n",
+    "            'end_time': end_time,\n",
+    "            'duration': duration,\n",
+    "            'start_price': start_price,\n",
+    "            'end_price': end_price,\n",
+    "            'price_change': price_change,\n",
+    "            'price_change_pct': price_change_pct\n",
+    "        })\n",
+    "    \n",
+    "    break_impacts_df = pd.DataFrame(break_impacts)\n",
+    "    \n",
+    "    if len(break_impacts_df) > 0:\n",
+    "        print(f\"Price change statistics across breaks:\")\n",
+    "        print(f\"  Average price change: ₹{break_impacts_df['price_change'].mean():.4f}\")\n",
+    "        print(f\"  Average percentage change: {break_impacts_df['price_change_pct'].mean():.2f}%\")\n",
+    "        print(f\"  Largest price increase: ₹{break_impacts_df['price_change'].max():.4f}\")\n",
+    "        print(f\"  Largest price decrease: ₹{break_impacts_df['price_change'].min():.4f}\")\n",
+    "        \n",
+    "        # Count positive vs negative price changes\n",
+    "        positive_changes = (break_impacts_df['price_change'] > 0).sum()\n",
+    "        negative_changes = (break_impacts_df['price_change'] < 0).sum()\n",
+    "        no_changes = (break_impacts_df['price_change'] == 0).sum()\n",
+    "        \n",
+    "        print(f\"\\nPrice change direction across breaks:\")\n",
+    "        print(f\"  Price increases: {positive_changes} breaks\")\n",
+    "        print(f\"  Price decreases: {negative_changes} breaks\")\n",
+    "        print(f\"  No change: {no_changes} breaks\")\n",
+    "    \n",
+    "    # 4. Longest breaks analysis\n",
+    "    print(f\"\\n--- LONGEST BREAKS ANALYSIS ---\")\n",
+    "    longest_breaks = potential_breaks.nlargest(5, 'time_gap_minutes')\n",
+    "    \n",
+    "    print(\"Top 5 longest trading breaks:\")\n",
+    "    for idx, (_, row) in enumerate(longest_breaks.iterrows(), 1):\n",
+    "        print(f\"{idx}. {row['date'].strftime('%H:%M:%S')} - {row['next_trade_time'].strftime('%H:%M:%S')} ({row['time_gap_minutes']:.1f} minutes)\")\n",
+    "    \n",
+    "    # 5. Break clustering analysis\n",
+    "    print(f\"\\n--- BREAK CLUSTERING ANALYSIS ---\")\n",
+    "    if len(potential_breaks) > 1:\n",
+    "        breaks_sorted = potential_breaks.sort_values('date')\n",
+    "        break_time_diffs = breaks_sorted['date'].diff().dt.total_seconds() / 60  # in minutes\n",
+    "        \n",
+    "        clustered_breaks = break_time_diffs[break_time_diffs <= 30]  # Within 30 minutes\n",
+    "        print(f\"Breaks within 30 minutes of each other: {len(clustered_breaks)}\")\n",
+    "        print(f\"Clustering percentage: {(len(clustered_breaks)/len(potential_breaks)*100):.1f}%\")\n",
+    "\n",
+    "# Market hours analysis\n",
+    "print(f\"\\n=== MARKET HOURS ANALYSIS ===\")\n",
+    "market_start = pd.Timestamp(df['date'].dt.date.iloc[0]).replace(hour=MARKET_HOURS[0], minute=0, second=0)\n",
+    "market_end = pd.Timestamp(df['date'].dt.date.iloc[0]).replace(hour=MARKET_HOURS[1], minute=59, second=59)\n",
+    "\n",
+    "total_market_minutes = (market_end - market_start).total_seconds() / 60\n",
+    "trading_minutes = len(df)  # Assuming 1 tick = 1 minute (approximate)\n",
+    "break_minutes = total_market_minutes - trading_minutes\n",
+    "\n",
+    "print(f\"Market hours: {market_start.strftime('%H:%M')} - {market_end.strftime('%H:%M')}\")\n",
+    "print(f\"Total market minutes: {total_market_minutes:.0f}\")\n",
+    "print(f\"Trading minutes: {trading_minutes}\")\n",
+    "print(f\"Break minutes: {break_minutes:.0f}\")\n",
+    "print(f\"Break percentage: {(break_minutes/total_market_minutes*100):.1f}%\")\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(f\"\\n=== SUMMARY STATISTICS ===\")\n",
+    "print(f\"Total trades analyzed: {len(df):,}\")\n",
+    "print(f\"Total potential breaks: {len(potential_breaks):,}\")\n",
+    "print(f\"Break detection threshold: {MIN_BREAK_DURATION_MINUTES} minutes\")\n",
+    "\n",
+    "if len(potential_breaks) > 0:\n",
+    "    print(f\"Average break duration: {potential_breaks['time_gap_minutes'].mean():.1f} minutes\")\n",
+    "    print(f\"Total break time: {potential_breaks['time_gap_minutes'].sum():.1f} minutes\")\n",
+    "    print(f\"Break frequency: {len(potential_breaks)/len(df)*100:.2f}%\")\n",
+    "\n",
+    "# Export break data\n",
+    "print(f\"\\n=== EXPORT DATA ===\")\n",
+    "print(\"Trading break data is available in:\")\n",
+    "print(\"- 'potential_breaks': DataFrame with all detected breaks\")\n",
+    "print(\"- 'break_impacts_df': DataFrame with price impact analysis\")\n",
+    "\n",
+    "# Display sample of break data\n",
+    "if len(potential_breaks) > 0:\n",
+    "    print(f\"\\n=== SAMPLE BREAK DATA (First 5 rows) ===\")\n",
+    "    sample_breaks = potential_breaks[['date', 'next_trade_time', 'time_gap_minutes', 'price', 'break_category']].head(5)\n",
+    "    print(sample_breaks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c54a5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b69a577c",
    "metadata": {},
    "outputs": [],
    "source": []
