Trading Session Stats

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -6703,11 +6703,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "06c54a5a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== OPENING AND CLOSING TRADE ANALYSIS ===\n",
+      "Total unique trading days: 1\n",
+      "\n",
+      "--- Trading Date: 2025-08-07 ---\n",
+      "  Opening Trade:\n",
+      "    Time: 09:15:00\n",
+      "    Price: ₹386.85\n",
+      "    Quantity: 65,740\n",
+      "    Turnover: ₹25,431,519.00\n",
+      "  Closing Trade:\n",
+      "    Time: 15:29:58\n",
+      "    Price: ₹388.25\n",
+      "    Quantity: 1,740\n",
+      "    Turnover: ₹675,555.00\n",
+      "  Session Summary:\n",
+      "    Duration: 375.0 minutes\n",
+      "    Price Change: ₹+1.4000 (+0.36%)\n",
+      "    Session High: ₹390.20\n",
+      "    Session Low: ₹383.50\n",
+      "    Total Volume: 11,510,171\n",
+      "    Total Turnover: ₹4,451,969,111.70\n",
+      "    Total Trades: 10,956\n",
+      "\n",
+      "=== SUMMARY STATISTICS ACROSS ALL TRADING DAYS ===\n",
+      "\n",
+      "--- PRICE ANALYSIS ---\n",
+      "Average opening price: ₹386.85\n",
+      "Average closing price: ₹388.25\n",
+      "Average session high: ₹390.20\n",
+      "Average session low: ₹383.50\n",
+      "Average price change: ₹1.4000\n",
+      "Average percentage change: 0.36%\n",
+      "\n",
+      "--- VOLUME ANALYSIS ---\n",
+      "Average opening volume: 65,740\n",
+      "Average closing volume: 1,740\n",
+      "Average session volume: 11,510,171\n",
+      "Average session turnover: ₹4,451,969,111.70\n",
+      "\n",
+      "--- SESSION ANALYSIS ---\n",
+      "Average session duration: 375.0 minutes\n",
+      "Average trades per session: 10,956\n",
+      "\n",
+      "--- BEST AND WORST PERFORMING SESSIONS ---\n",
+      "Best session: 2025-08-07 (+0.36%)\n",
+      "  Opening: ₹386.85 at 09:15:00\n",
+      "  Closing: ₹388.25 at 15:29:58\n",
+      "Worst session: 2025-08-07 (0.36%)\n",
+      "  Opening: ₹386.85 at 09:15:00\n",
+      "  Closing: ₹388.25 at 15:29:58\n",
+      "\n",
+      "=== OPENING AND CLOSING TRADES SUMMARY TABLE ===\n",
+      "      date opening_time  opening_price closing_time  closing_price  price_change_pct  session_volume  session_trades\n",
+      "2025-08-07     09:15:00         386.85     15:29:58         388.25              0.36        11510171           10956\n",
+      "\n",
+      "=== EXPORT DATA ===\n",
+      "Opening and closing trade data is available in:\n",
+      "- 'summary_df': Complete DataFrame with all session data\n",
+      "- 'opening_closing_trades': List of dictionaries with session data\n",
+      "\n",
+      "=== SAMPLE SUMMARY DATA (First 3 rows) ===\n",
+      "         date  opening_price  closing_price  price_change_pct  session_volume  \\\n",
+      "0  2025-08-07         386.85         388.25          0.361897        11510171   \n",
+      "\n",
+      "   session_trades  \n",
+      "0           10956  \n",
+      "\n",
+      "=== ANALYSIS COMPLETE ===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify first trade of each and last trade (opening and closing)\n",
+    "print(\"=== OPENING AND CLOSING TRADE ANALYSIS ===\")\n",
+    "\n",
+    "# Ensure data is sorted by datetime\n",
+    "df = df.sort_values('date').reset_index(drop=True)\n",
+    "\n",
+    "# Get unique trading dates\n",
+    "unique_dates = df['date'].dt.date.unique()\n",
+    "print(f\"Total unique trading days: {len(unique_dates)}\")\n",
+    "\n",
+    "# Analyze opening and closing trades for each day\n",
+    "opening_closing_trades = []\n",
+    "\n",
+    "for trading_date in unique_dates:\n",
+    "    print(f\"\\n--- Trading Date: {trading_date} ---\")\n",
+    "    \n",
+    "    # Filter data for this specific date\n",
+    "    day_data = df[df['date'].dt.date == trading_date].copy()\n",
+    "    day_data = day_data.sort_values('date').reset_index(drop=True)\n",
+    "    \n",
+    "    if len(day_data) == 0:\n",
+    "        print(\"  No trades found for this date\")\n",
+    "        continue\n",
+    "    \n",
+    "    # Get first trade (opening)\n",
+    "    first_trade = day_data.iloc[0]\n",
+    "    opening_time = first_trade['date']\n",
+    "    opening_price = first_trade['price']\n",
+    "    opening_qty = first_trade['qty']\n",
+    "    opening_trnvr = first_trade['trnvr']\n",
+    "    \n",
+    "    # Get last trade (closing)\n",
+    "    last_trade = day_data.iloc[-1]\n",
+    "    closing_time = last_trade['date']\n",
+    "    closing_price = last_trade['price']\n",
+    "    closing_qty = last_trade['qty']\n",
+    "    closing_trnvr = last_trade['trnvr']\n",
+    "    \n",
+    "    # Calculate session statistics\n",
+    "    session_high = day_data['price'].max()\n",
+    "    session_low = day_data['price'].min()\n",
+    "    session_volume = day_data['qty'].sum()\n",
+    "    session_turnover = day_data['trnvr'].sum()\n",
+    "    session_trades = len(day_data)\n",
+    "    \n",
+    "    # Calculate price change and percentage change\n",
+    "    price_change = closing_price - opening_price\n",
+    "    price_change_pct = (price_change / opening_price) * 100 if opening_price != 0 else 0\n",
+    "    \n",
+    "    # Calculate session duration\n",
+    "    session_duration = closing_time - opening_time\n",
+    "    session_duration_minutes = session_duration.total_seconds() / 60\n",
+    "    \n",
+    "    print(f\"  Opening Trade:\")\n",
+    "    print(f\"    Time: {opening_time.strftime('%H:%M:%S')}\")\n",
+    "    print(f\"    Price: ₹{opening_price:.2f}\")\n",
+    "    print(f\"    Quantity: {opening_qty:,}\")\n",
+    "    print(f\"    Turnover: ₹{opening_trnvr:,.2f}\")\n",
+    "    \n",
+    "    print(f\"  Closing Trade:\")\n",
+    "    print(f\"    Time: {closing_time.strftime('%H:%M:%S')}\")\n",
+    "    print(f\"    Price: ₹{closing_price:.2f}\")\n",
+    "    print(f\"    Quantity: {closing_qty:,}\")\n",
+    "    print(f\"    Turnover: ₹{closing_trnvr:,.2f}\")\n",
+    "    \n",
+    "    print(f\"  Session Summary:\")\n",
+    "    print(f\"    Duration: {session_duration_minutes:.1f} minutes\")\n",
+    "    print(f\"    Price Change: ₹{price_change:+.4f} ({price_change_pct:+.2f}%)\")\n",
+    "    print(f\"    Session High: ₹{session_high:.2f}\")\n",
+    "    print(f\"    Session Low: ₹{session_low:.2f}\")\n",
+    "    print(f\"    Total Volume: {session_volume:,}\")\n",
+    "    print(f\"    Total Turnover: ₹{session_turnover:,.2f}\")\n",
+    "    print(f\"    Total Trades: {session_trades:,}\")\n",
+    "    \n",
+    "    # Store data for summary\n",
+    "    opening_closing_trades.append({\n",
+    "        'date': trading_date,\n",
+    "        'opening_time': opening_time,\n",
+    "        'opening_price': opening_price,\n",
+    "        'opening_qty': opening_qty,\n",
+    "        'opening_trnvr': opening_trnvr,\n",
+    "        'closing_time': closing_time,\n",
+    "        'closing_price': closing_price,\n",
+    "        'closing_qty': closing_qty,\n",
+    "        'closing_trnvr': closing_trnvr,\n",
+    "        'session_high': session_high,\n",
+    "        'session_low': session_low,\n",
+    "        'session_volume': session_volume,\n",
+    "        'session_turnover': session_turnover,\n",
+    "        'session_trades': session_trades,\n",
+    "        'price_change': price_change,\n",
+    "        'price_change_pct': price_change_pct,\n",
+    "        'session_duration_minutes': session_duration_minutes\n",
+    "    })\n",
+    "\n",
+    "# Create summary DataFrame\n",
+    "if opening_closing_trades:\n",
+    "    summary_df = pd.DataFrame(opening_closing_trades)\n",
+    "    \n",
+    "    print(f\"\\n=== SUMMARY STATISTICS ACROSS ALL TRADING DAYS ===\")\n",
+    "    \n",
+    "    # Price analysis\n",
+    "    print(f\"\\n--- PRICE ANALYSIS ---\")\n",
+    "    print(f\"Average opening price: ₹{summary_df['opening_price'].mean():.2f}\")\n",
+    "    print(f\"Average closing price: ₹{summary_df['closing_price'].mean():.2f}\")\n",
+    "    print(f\"Average session high: ₹{summary_df['session_high'].mean():.2f}\")\n",
+    "    print(f\"Average session low: ₹{summary_df['session_low'].mean():.2f}\")\n",
+    "    print(f\"Average price change: ₹{summary_df['price_change'].mean():.4f}\")\n",
+    "    print(f\"Average percentage change: {summary_df['price_change_pct'].mean():.2f}%\")\n",
+    "    \n",
+    "    # Volume analysis\n",
+    "    print(f\"\\n--- VOLUME ANALYSIS ---\")\n",
+    "    print(f\"Average opening volume: {summary_df['opening_qty'].mean():,.0f}\")\n",
+    "    print(f\"Average closing volume: {summary_df['closing_qty'].mean():,.0f}\")\n",
+    "    print(f\"Average session volume: {summary_df['session_volume'].mean():,.0f}\")\n",
+    "    print(f\"Average session turnover: ₹{summary_df['session_turnover'].mean():,.2f}\")\n",
+    "    \n",
+    "    # Session analysis\n",
+    "    print(f\"\\n--- SESSION ANALYSIS ---\")\n",
+    "    print(f\"Average session duration: {summary_df['session_duration_minutes'].mean():.1f} minutes\")\n",
+    "    print(f\"Average trades per session: {summary_df['session_trades'].mean():,.0f}\")\n",
+    "    \n",
+    "    # Best and worst performing sessions\n",
+    "    print(f\"\\n--- BEST AND WORST PERFORMING SESSIONS ---\")\n",
+    "    \n",
+    "    best_session = summary_df.loc[summary_df['price_change_pct'].idxmax()]\n",
+    "    worst_session = summary_df.loc[summary_df['price_change_pct'].idxmin()]\n",
+    "    \n",
+    "    print(f\"Best session: {best_session['date']} (+{best_session['price_change_pct']:.2f}%)\")\n",
+    "    print(f\"  Opening: ₹{best_session['opening_price']:.2f} at {best_session['opening_time'].strftime('%H:%M:%S')}\")\n",
+    "    print(f\"  Closing: ₹{best_session['closing_price']:.2f} at {best_session['closing_time'].strftime('%H:%M:%S')}\")\n",
+    "    \n",
+    "    print(f\"Worst session: {worst_session['date']} ({worst_session['price_change_pct']:.2f}%)\")\n",
+    "    print(f\"  Opening: ₹{worst_session['opening_price']:.2f} at {worst_session['opening_time'].strftime('%H:%M:%S')}\")\n",
+    "    print(f\"  Closing: ₹{worst_session['closing_price']:.2f} at {worst_session['closing_time'].strftime('%H:%M:%S')}\")\n",
+    "    \n",
+    "    # Display summary table\n",
+    "    print(f\"\\n=== OPENING AND CLOSING TRADES SUMMARY TABLE ===\")\n",
+    "    display_cols = ['date', 'opening_time', 'opening_price', 'closing_time', 'closing_price', \n",
+    "                   'price_change_pct', 'session_volume', 'session_trades']\n",
+    "    \n",
+    "    summary_display = summary_df[display_cols].copy()\n",
+    "    summary_display['opening_time'] = summary_display['opening_time'].dt.strftime('%H:%M:%S')\n",
+    "    summary_display['closing_time'] = summary_display['closing_time'].dt.strftime('%H:%M:%S')\n",
+    "    summary_display['price_change_pct'] = summary_display['price_change_pct'].round(2)\n",
+    "    \n",
+    "    print(summary_display.to_string(index=False))\n",
+    "    \n",
+    "    # Export data\n",
+    "    print(f\"\\n=== EXPORT DATA ===\")\n",
+    "    print(\"Opening and closing trade data is available in:\")\n",
+    "    print(\"- 'summary_df': Complete DataFrame with all session data\")\n",
+    "    print(\"- 'opening_closing_trades': List of dictionaries with session data\")\n",
+    "    \n",
+    "    # Display sample of summary data\n",
+    "    print(f\"\\n=== SAMPLE SUMMARY DATA (First 3 rows) ===\")\n",
+    "    sample_summary = summary_df[['date', 'opening_price', 'closing_price', 'price_change_pct', \n",
+    "                                'session_volume', 'session_trades']].head(3)\n",
+    "    print(sample_summary)\n",
+    "    \n",
+    "else:\n",
+    "    print(\"No trading data found to analyze\")\n",
+    "\n",
+    "print(f\"\\n=== ANALYSIS COMPLETE ===\")"
+   ]
   },
   {
    "cell_type": "code",
